--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-unimodules": "~0.10.1",
     "react-native-web": "~0.11.7",
     "expo-media-library": "~8.2.1",
-    "expo-image-picker": "~8.3.0"
+    "expo-image-picker": "~8.3.0",
+    "expo-sharing": "~8.2.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
