--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-web": "~0.11.7",
     "expo-media-library": "~8.2.1",
     "expo-image-picker": "~8.3.0",
-    "expo-sharing": "~8.2.1"
+    "expo-sharing": "~8.2.1",
+    "react-native-webview": "9.4.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
